@@ -21,6 +21,35 @@ Type 'q()' to quit R.
 > assertError <- tools::assertError # "import"
 > ##too fragile: showMethods(where = "package:methods")
 > 
+> ## When this test comes too late, it fails too early in R <= 3.2.2
+> require(stats4)
+Loading required package: stats4
+> detach("package:methods")
+> require("methods")
+Loading required package: methods
+> cc <- methods::getClassDef("standardGeneric")
+> cc ## (auto) print failed here, in R <= 3.2.2
+Class "standardGeneric" [package "methods"]
+
+Slots:
+                                                                  
+Name:           .Data        generic        package          group
+Class:       function      character      character           list
+                                                                  
+Name:      valueClass      signature        default       skeleton
+Class:      character      character optionalMethod           call
+
+Extends: 
+Class "genericFunction", directly
+Class "function", by class "genericFunction", distance 2
+Class "OptionalFunction", by class "function", distance 3
+Class "PossibleMethod", by class "function", distance 3
+Class "optionalMethod", by class "genericFunction", distance 4
+
+Known Subclasses: "standardGenericWithTrace"
+> stopifnot(.isMethodsDispatchOn()) ## was FALSE in R <= 3.2.2
+> 
+> 
 > ## Needs cached primitive generic for '$'
 > new("envRefClass")# failed in R <= 3.2.0
 Reference class object of class "envRefClass"
